training.err
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\morrossl\Documents\Private\SLM\neuroslm\train.py", line 20, in <module>
    from .brain import Brain
  File "C:\Users\morrossl\Documents\Private\SLM\neuroslm\brain.py", line 63
    def record_episode(self, content, content_vec, nt_state, emotion, tags, context):
                                                                                     ^
IndentationError: unindent does not match any outer indentation level
